--- a/src/app/product/product_list.html
+++ b/src/app/product/product_list.html
@@ -47,21 +47,40 @@
                             </form>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="padding-top: 60px">
                         <div class="col-lg-2">
                             <form role="form">
-                                <button type="button" class="btn btn-default">&nbsp;&nbsp;新增AR产品&nbsp;&nbsp;</button>
+                                <a href="#new_ar_product_detail"><button type="button" class="btn btn-default">新增AR产品</button></a>
                             </form>
                         </div>
                         <div class="col-lg-2">
                             <form role="form">
-                                <button type="button" class="btn btn-default">&nbsp;&nbsp;新增视频产品&nbsp;&nbsp;</button>
+                                <a href="#new_video_product_detail"><button type="button" class="btn btn-default">新增视频产品</button></a>
                             </form>
                         </div>
 
                         <div class="col-lg-1 col-md-offset-4">
                             <form role="form">
-                                <button type="button" class="btn btn-primary">&nbsp;&nbsp;推&nbsp;&nbsp;&nbsp;&nbsp;荐&nbsp;&nbsp;</button>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recommentDiag">&nbsp;&nbsp;推&nbsp;&nbsp;&nbsp;&nbsp;荐&nbsp;&nbsp;</button>
+                                <div class="modal fade" id="recommentDiag" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                Hello world!!!
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                            </div>
+                                        </div>
+                                        <!-- /.modal-content -->
+                                    </div>
+                                    <!-- /.modal-dialog -->
+                                </div>
                             </form>
                         </div>
                         <div class="col-lg-1">
@@ -82,13 +101,51 @@
 
                     </div>
                     <div class="row" style="padding-top: 20px">
-                        <div class="col-lg-12" style="background-color: #d3d3d3">
-                            <form role="form">
-                                <h4>Table Content</h4>
-                                <h4>Table Content</h4>
-                                <h4>Table Content</h4>
-                                <h4><a href="#new_ar_product_detail/2222">2222 product</a></h4>
-                            </form>
+                        <div class="col-lg-12">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>产品封面图</th>
+                                        <th>产品名</th>
+                                        <th>产品发布状态</th>
+                                        <th>修改时间</th>
+                                        <th>是否推荐</th>
+                                        <th>产品类型</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td><input type="checkbox" name=""></td>
+                                        <td><i class="fa fa-users fa-fw"></i></td>
+                                        <td><a href="#new_ar_product_detail/2222">2222 product</a></td>
+                                        <td>上架</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td>是</td>
+                                        <td>AR</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name=""></td>
+                                        <td><i class="fa fa-users fa-fw"></i></td>
+                                        <td><a href="#new_ar_product_detail/2222">2222 product</a></td>
+                                        <td>下架</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td>是</td>
+                                        <td>视频</td>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="checkbox" name=""></td>
+                                        <td><i class="fa fa-users fa-fw"></i></td>
+                                        <td><a href="#new_ar_product_detail/2222">3333 product</a></td>
+                                        <td>下架</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td>否</td>
+                                        <td>视频</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
