--- a/src/app/category/first_level_category.html
+++ b/src/app/category/first_level_category.html
@@ -5,34 +5,54 @@
                 <div class="panel-heading">一级分类</div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-lg-4">
+                        <div class="col-lg-6">
                             <form role="form">
-                                <h4>分类名</h4>
+                                <div class="form-group">
+                                    <label>分类名：</label>
+                                    <input class="form-control" placeholder="输入分类名...">
+                                </div>
                             </form>
                         </div>
-                        <div class="col-lg-4">
-                            <form role="form">
-                                <h4>分类内容</h4>
-                            </form>
-                        </div>
-                        <div class="col-lg-4">
-                            <form role="form">
-                                <h4>搜索</h4>
+                        <div class="col-lg-6">
+                            <form role="form" style="text-align: right">
+                                <div class="form-group">
+                                    <button type="button" class="btn btn-primary">搜索</button>
+                                </div>
                             </form>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12" style="background-color: #dcdcdc">
-                            <form role="form">
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                            </form>
+                        <div class="col-lg-12">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>一级分类名</th>
+                                        <th>修改时间</th>
+                                        <th>操作</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td>语言</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>社会</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>语言</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-lg-12">
                             <form role="form">
@@ -43,19 +63,26 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                                <h4 class="modal-title" id="myModalLabel">新增/修改一级分类</h4>
                                             </div>
                                             <div class="modal-body">
-                                                Hello world!!!.
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <form role="form">
+                                                            <div class="form-group">
+                                                                <label>一级分类名：</label>
+                                                                <input class="form-control" placeholder="输入分类名...">
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                                                <button type="button" class="btn btn-primary">修改/新增</button>
                                             </div>
                                         </div>
-                                        <!-- /.modal-content -->
                                     </div>
-                                    <!-- /.modal-dialog -->
                                 </div>
                             </form>
                         </div>
