--- a/src/app/category/second_level_category.html
+++ b/src/app/category/second_level_category.html
@@ -7,32 +7,67 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <form role="form">
-                                <h4>分类名</h4>
+                                <div class="form-group">
+                                    <label for="product_category">所属一级分类:</label>
+                                    <select class="form-control" id="product_category">
+                                        <option>全部</option>
+                                        <option>语言</option>
+                                    </select>
+                                </div>
                             </form>
                         </div>
                         <div class="col-lg-4">
                             <form role="form">
-                                <h4>分类内容</h4>
+                                <div class="form-group">
+                                    <label>分类名：</label>
+                                    <input class="form-control" placeholder="输入分类名...">
+                                </div>
                             </form>
                         </div>
                         <div class="col-lg-4">
-                            <form role="form">
-                                <h4>搜索</h4>
+                            <form role="form" style="text-align: right">
+                                <div class="form-group">
+                                    <button type="button" class="btn btn-primary">搜索</button>
+                                </div>
                             </form>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-12" style="background-color: #dcdcdc">
-                            <form role="form">
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                                <h4>分类表</h4>
-                            </form>
+                        <div class="col-lg-12">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>一级分类名</th>
+                                        <th>二级分类名</th>
+                                        <th>修改时间</th>
+                                        <th>操作</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td>语言</td>
+                                        <td>语言</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>语言</td>
+                                        <td>社会</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>语言</td>
+                                        <td>语言</td>
+                                        <td>2016-10-10 10:50:59</td>
+                                        <td class="center"><button class="btn btn-yahoo">删除</button></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-lg-12">
                             <form role="form">
@@ -43,19 +78,39 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                                <h4 class="modal-title" id="myModalLabel">新增/修改二级分类</h4>
                                             </div>
                                             <div class="modal-body">
-                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <form role="form">
+                                                            <div class="form-group">
+                                                                <label for="product_category">一级分类名:</label>
+                                                                <select class="form-control">
+                                                                    <option>全部</option>
+                                                                    <option>语言</option>
+                                                                </select>
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                        <form role="form">
+                                                            <div class="form-group">
+                                                                <label>二级分类名：</label>
+                                                                <input class="form-control" placeholder="输入分类名...">
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                                                <button type="button" class="btn btn-primary">修改/新增</button>
                                             </div>
                                         </div>
-                                        <!-- /.modal-content -->
                                     </div>
-                                    <!-- /.modal-dialog -->
                                 </div>
                             </form>
                         </div>
