--- a/src/app/product/new_ar_product_detail.html
+++ b/src/app/product/new_ar_product_detail.html
@@ -1,11 +1,11 @@
 <div id="page-wrapper">
     <div class="row">
-        <div class="col-lg-12" style="padding-top: 30px">
+        <div class="col-lg-9" style="padding-top: 30px">
             <div class="panel panel-default">
                 <div class="panel-heading">新增AR产品/产品详情</div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <form role="form">
                                 <div class="form-group">
                                     <label>产品名：</label>
@@ -13,7 +13,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <form role="form">
                                 <div class="form-group">
                                     <label>价格：</label>
@@ -21,7 +21,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <form role="form">
                                 <div class="form-group">
                                     <label>评分：</label>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <form role="form">
                                 <div class="form-group">
                                     <label>产品介质形式：</label>
@@ -56,51 +56,55 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-lg-3">
-                            <form role="form">
-                                <div class="form-group">
-                                    <label>一级分类：</label>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">语言</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">认知</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">兴趣</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">习惯</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">社交</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">人格</label>
-                                    </div>
+                        <div class="col-lg-4">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>一级分类：</label>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">语言</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">认知</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">兴趣</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">习惯</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">社交</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">人格</label>
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
-                            </form>
-                        </div>
-                        <div class="col-lg-3">
-                            <form role="form">
-                                <div class="form-group">
-                                    <label>二级分类：</label>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">故事</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">国学</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">拼音</label>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label><input type="checkbox" value="">英语</label>
-                                    </div>
+                                <div class="col-lg-6">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>二级分类：</label>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">故事</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">国学</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">拼音</label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label><input type="checkbox" value="">英语</label>
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
-                            </form>
+                            </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <form role="form">
                                 <div class="form-group">
                                     <label>适合年龄：</label>
@@ -124,7 +128,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-9">
+                        <div class="col-lg-12">
                             <form role="form">
                                 <div class="form-group">
                                     <label>分类标签*</label>
@@ -135,7 +139,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-9">
+                        <div class="col-lg-12">
                             <form role="form">
                                 <div class="form-group">
                                     <label>产品描述：</label>
@@ -147,7 +151,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="panel panel-default">
-                                <div class="panel-heading">产品封面图 （建议360*360）：</div>
+                                <div class="panel-heading">产品封面图(建议360*360)</div>
                                 <div class="panel-body">
                                     <div class="row">
                                         <div class="col-lg-12">
@@ -164,7 +168,7 @@
                         </div>
                         <div class="col-lg-4">
                             <div class="panel panel-default">
-                                <div class="panel-heading">手机端产品微店二维码 （建议360*360）：</div>
+                                <div class="panel-heading">手机端产品微店二维码(建议360*360)</div>
                                 <div class="panel-body">
                                     <div class="row">
                                         <div class="col-lg-12">
@@ -181,9 +185,9 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-9">
+                        <div class="col-lg-12">
                             <div class="panel panel-default">
-                                <div class="panel-heading">产品截图（建议1280 x*1024，最多3张）：</div>
+                                <div class="panel-heading">产品截图(建议1280 x*1024，最多3张)</div>
                                 <div class="panel-body">
                                     <div class="row">
                                         <div class="col-lg-4">
@@ -216,13 +220,19 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-9">
+                        <div class="col-lg-3">
                             <form role="form">
                                 <div class="form-group">
                                     <div class="checkbox">
                                         <label><input type="checkbox" value="">启用演示视频：</label>
-                                        <button type="button" class="btn btn-primary">视频播放地址</button>
                                     </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-lg-3">
+                            <form role="form">
+                                <div class="form-group">
+                                    <button type="button" class="btn btn-primary">视频播放地址</button>
                                 </div>
                             </form>
                         </div>
@@ -247,7 +257,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-12">
                             <form role="form">
                                 <div class="form-group">
                                     <div class="checkbox">
@@ -258,7 +268,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-9">
+                        <div class="col-lg-12">
                             <div class="panel panel-default">
                                 <div class="panel-body">
                                     <div class="row">
